--- a/frontend/src/styles/Advisors.css
+++ b/frontend/src/styles/Advisors.css
@@ -74,13 +74,77 @@
   
   .graph-placeholder {
     width: 100%;
-    height: 94%;
-
+    height: 85%;
     background-color: #2e3a59;
     border-radius: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
     color: #ddd;
+  }
+  
+  .advisor-card {
+    background-color: #2e3a59;
+    padding: 0.5rem 1rem;
+    margin-bottom: 0.3rem;
+    margin-top: 0.3rem;
+    
+    border-radius: 0.3rem;
+    cursor: pointer;
+    transition: background 0.2s ease;
+  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  .advisor-card:hover {
+    background-color: #3b486c;
+  }
+  
+  .card-name {
+    font-weight: bold;
+    flex: 1;
+    color: #ffe9ec;
+  }
+  
+  .card-score {
+    flex-shrink: 0;
+    color: #ffc371;
+  }
+  
+  .card-date {
+    flex-shrink: 0;
+    font-size: 0.9rem;
+    color: #ccc;
+  }
+  
+
+  .advisor-section-title {
+    font-size: 1.3rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    color: #ffe9ec;
+  }
+  
+
+  .search-dropdown {
+    background-color: #1a1c2c;
+    margin-top: 0.5rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    max-height: 150px;
+    overflow-y: auto;
+  }
+  
+  .search-option {
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    color: #ffe9ec;
+  }
+  
+  .search-option:hover {
+    background-color: #2e3a59;
   }
   
