--- a/frontend/src/styles/Student.css
+++ b/frontend/src/styles/Student.css
@@ -35,11 +35,13 @@
     color: #ffe9ec;
     justify-content: center;
     align-items: center;
+    height: 20%;
 }
 .snt-card-footer {
     font-size: large;
     font-weight: bold;
     color: #ffe9ec;
+    height: 20%;
 }
 .snt-card-footer .nav {
     display: flex;
@@ -71,11 +73,12 @@
     transition: background-color 0.3s ease;
 }
 
-.lin-card-body {
+.snt-card-body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     width: 100%;
+    height: 80%;
     align-items: center;
     justify-content: center;
     color: #ffe9ec;
