--- a/frontend/src/styles/Advisors.css
+++ b/frontend/src/styles/Advisors.css
@@ -23,8 +23,8 @@
   
   .advisor-signout {
     font-size: 1rem;
-    text-decoration: underline;
-    color: #ffe9ec;
+    font-weight: bold;
+    background-color: #ff6f6e;
     cursor: pointer;
     transition: color 0.3s ease;
     margin-right: 1rem;
@@ -44,14 +44,29 @@
     margin-right: 1rem;
     margin-left: 1rem;
   }
+
+  .hp-container {
+    height: 80%;
+    min-height: 80%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+  }
   
   .advisor-section {
+    width: 47vw;
+    min-width: 500px;
+    height: 45vh;
+    min-height: 500px;
     background-color: #1a1c2c;
     border-radius: 1rem;
     padding: 1.5rem;
     color: #ffe9ec;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
     overflow-y: auto;
+    overflow: hidden;
   }
   
   .adv-input {
@@ -63,13 +78,25 @@
     border: none;
   }
   
+  .adv-scores {
+    height: 80%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
   .adv-button {
     background-color: #eec7b3;
+    width: 150px;
+    height: 50px;
+    min-height: 50px;
+    font-size: 1rem;
+    font-weight: bold;
     border: none;
     border-radius: 0.5rem;
-    margin-right: 0.5rem;
-    padding: 0.5rem 1rem;
     cursor: pointer;
+    transition: background-color 0.3s ease;
   }
   
   .graph-placeholder {
@@ -88,6 +115,10 @@
     padding: 0.5rem 1rem;
     margin-bottom: 0.3rem;
     margin-top: 0.3rem;
+    height: 15%;
+    min-height: 50px;
+    width: 90%;
+    min-width: 90%;
     
     border-radius: 0.3rem;
     cursor: pointer;
@@ -131,7 +162,6 @@
 
   .search-dropdown {
     background-color: #1a1c2c;
-    margin-top: 0.5rem;
     border-radius: 0.5rem;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     max-height: 150px;
