--- a/frontend/src/styles/Advisors.css
+++ b/frontend/src/styles/Advisors.css
@@ -75,11 +75,12 @@
   
   .graph-placeholder {
     width: 100%;
+    margin-top: .4rem;
     height: 85%;
     background-color: #2e3a59;
     border-radius: 0.5rem;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     color: #ddd;
   }
@@ -152,7 +153,7 @@
   .search-input {
     margin-top: 2rem;
     margin-bottom: 1rem; /* adds spacing between each input */
-    padding: 0.8rem;
+    padding: 0.7rem;
     width: 100%;
     border-radius: 0.5rem;
     border: none;
