--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -34,7 +34,8 @@ indigo: #1a1c2c
 
 }
 .lin-card-tall {
-    height: 60vh;
+    height: 70vh;
+    min-height: 70vh;
     width: 40vw;
   }
 
@@ -51,10 +52,23 @@ indigo: #1a1c2c
     width: 100%;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+}
+.lin-card-body-center {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    height: 30vh;
+    min-height: 15vh;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
 .lin-input {
     width: 40%;
     height: 6vh;
+    min-height: 50px;
     margin: 1vh;
 
 }
